fix: added spacing between chat & both sidenavs | fixed border-radius for header of chat-interface

--- a/src/app/features/workspace/components/chat-interface-content/chat-interface-component.scss
+++ b/src/app/features/workspace/components/chat-interface-content/chat-interface-component.scss
@@ -15,9 +15,15 @@
 
 .chat-content {
   flex: 1;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .chat-header {
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   margin-bottom: 20px;
   height: 96px;
   width: 100%;
